infrastructure/platform/identity/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payu-sso
  labels:
    app.kubernetes.io/part-of: payu
    app.kubernetes.io/component: identity
    payu.fajjjar.my.id/ingress: shared
