infrastructure/platform/identity/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payu-keycloak-service
  namespace: payu-sso
  labels:
    app.kubernetes.io/name: payu-keycloak
    app.kubernetes.io/component: sso
    app.kubernetes.io/part-of: payu
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: management
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: keycloak
    app.kubernetes.io/instance: payu-keycloak
    app.kubernetes.io/managed-by: keycloak-operator
