infrastructure/platform/identity/keycloak/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: payu-keycloak
  labels:
    app.kubernetes.io/name: payu-keycloak
    app.kubernetes.io/component: sso
    app.kubernetes.io/part-of: payu
spec:
  to:
    kind: Service
    name: payu-keycloak-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
